[package]
name = "actix_demo"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
actix = "0.9.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
markdown= "0.2.0"
futures = "0.3.4"
bytes = "0.5.4"
