[package]
name = "actix_demo"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
actix = "0.10.0"
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-rt = "1.1.1"
markdown= "0.3.0"
futures = "0.3.12"
bytes = "1.0.1"
