[package]
name = "binlog"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.7"
time="*"
# regex="1.1.9"
mongodb = "0.3.11"
serde="1.0.94"
serde_derive="1.0.94"
serde_json="1.0"