[package]
name = "binlog"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.7"
time= "0.1.42"
regex= "1.2.1"
mongodb = "0.3.12"
serde= "1.0.98"
serde_derive= "1.0.98"
serde_json= "1.0.40"
