[package]
name = "coder"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="1.0.94"
serde_derive="1.0.94"
serde_json="1.0"

[dependencies.mysql]
version = "16.0.2"
