[package]
name = "coder"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4.7"
log4rs="0.8.3"
serde="1.0.94"
serde_derive="1.0.94"
serde_json="1.0"

# 引入mysql库
[dependencies.mysql]
version = "16.0.2"

[dependencies.lane]
path = "../../lane"
version = "0.1.0"

# 可以减少编译后的文件大小
[profile.release]
lto = true