[package]
name = "crawler"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hyper = "0.12"
# select = "0.4.3"
# html5ever = "0.24"
url = "2.1.0"
scraper = "0.11.0"
serde= "1.0.102"
serde_json= "1.0.41"
serde_derive= "1.0.102"
percent-encoding= "2.1.0"

[dependencies.reqwest]
version = "0.9.22"
optional = true

[features]
default = ["http"]
http = ["reqwest"]
unstable = []
