[package]
name = "crawler"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hyper = "0.12"
# select = "0.4.3"
# html5ever = "0.24"
url = "2.1.1"
scraper = "0.12.0"
serde= "1.0.111"
serde_json= "1.0.55"
serde_derive= "1.0.111"
percent-encoding= "2.1.0"

[dependencies.reqwest]
version = "0.10.6"
optional = true

[features]
default = ["http"]
http = ["reqwest"]
unstable = []
