[package]
name = "deployer"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
serde= "1.0.104"
serde_derive= "1.0.104"
serde_json= "1.0.48"
clap= "2.33.0"
