[package]
name = "las"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
env_logger = "0.7.1"
chrono = "0.4.11"
futures = "0.3.4"
actix-rt = "1.0.0"
bytes = "0.5.4"
