[package]
name = "las"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
env_logger = "0.8.2"
chrono = "0.4.19"
futures = "0.3.12"
actix-rt = "1.1.1"
bytes = "1.0.1"
