[package]
name = "plug-dts"
version = "0.1.0"
authors = ["tynr426 <tynr426@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "17.0.0"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
json = "0.12.0"
chrono = { version = "0.4.10", features = ["serde"] }
lazy_static = "1.4.0"
reqwest = { version = "0.10.2", features = ["blocking", "json"] }
md5="*"
percent-encoding = "2.1.0"

[dependencies.lane]
path ="../../lane"
version = "0.1.0"

[dependencies.lane_crypto]
path ="../../lane/crypto"
version = "0.1.0"

[dependencies.lane_mysql]
path = "../../lane/mysql"
version = "0.2.0"