[package]
name = "proc"
version = "0.1.0"
authors = ["Neil-้น <shaipe@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-mutex = "1.4.0"
quote = "1.0.8"


[dependencies.syn]
version = "1.0.58"
features = ["full"]


[lib]
proc-macro = true
