[package]
name = "stress"
version = "0.1.0"
authors = ["Neil-้น <shaipe@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version= "0.10.10", features = [ "json"]}
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.59"
serde = "1.0.117"
bytes = "0.5"
chrono = "0.4.19"
fast_log = "1.3.10"
log = "0.4.11"
