[package]
name = "stress"
version = "0.1.0"
authors = ["Neil-้น <shaipe@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = [ "json"] }
tokio = { version = "1.0.2", features = ["full"] }
serde_json = "1.0.61"
serde = "1.0.119"
bytes = "1.0.1"
chrono = "0.4.19"
fast_log = "1.3.21"
log = "0.4.13"
