[package]
name = "tool"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log= "0.4.8"
log4rs= "0.8.3"
serde= "1.0.102"
serde_derive= "1.0.102"
serde_json= "1.0.41"
regex = "1.3.1"
image = "0.22.3"
rustc-serialize = "0.3.24"
time = "0.1.42"
mysql = "17.0.0"

[dependencies.lane]
path = "../../lane"
version = "0.1.0"

# 可以减少编译后的文件大小
[profile.release]
lto = true
