[package]
name = "tool"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = "0.3.4"
lopdf = "0.26.0"
# log= "0.4.8"
# log4rs= "0.10.0"
# serde= "1.0.104"
# serde_derive= "1.0.104"
# serde_json= "1.0.48"
# regex = "1.3.4"
# image = "0.23.0"
# rustc-serialize = "0.3.24"
# time = "0.2.7"
# mysql = "17.0.0"

# [dependencies.lane]
# path = "../../lane"
# version = "0.1.0"

# 可以减少编译后的文件大小
[profile.release]
lto = true
