[package]
name = "tts"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.4", default-features = false, features = ["macros"] }
chrono= "0.4.19"
serde_json = "1.0.59"
serde_derive = "1.0.117"
serde = "1.0.117"
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
# timer="*"