[package]
name = "tts"
version = "0.1.0"
authors = ["shaipe <shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", default-features = false, features = ["macros"] }
chrono= "0.4.19"
serde_json = "1.0.61"
serde_derive = "1.0.119"
serde = "1.0.119"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
# timer="*"