[package]
name = "wmps"
version = "0.1.0"
authors = ["Shaipe <Shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-service = "0.2.0"
log= "0.4.8"
log4rs= "0.10.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser"] }
