[package]
name = "wmps"
version = "0.1.0"
authors = ["Shaipe <Shaipe@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-service = "0.3.1"
log= "0.4.13"
log4rs= "1.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
